# Detect-Threat

./: .gitignore  AGENTS.md  README.md  pyproject.toml
D_T_System/: README.md  agents_standard.py  bootstrap_router.py  dt_satellite_router.py  integration_policy.json  satellite_config.json
D_T_System/monitoring/: agent_monitor_dashboard.py
D_T_System/profiles/: __init__.py
D_T_System/tools/: manus_runtime_reducer.py
agent_configs/: agent_allocation.json  agent_registry.json
android-watchdog/: gradle.properties  settings.gradle.kts
android-watchdog/app/: build.gradle.kts
config/: Access to the latest virus and malware db  Tools Available.md  gap research sites of top 5 contenders  what is the best way to incorportate vpn  workspace_settings.json
docs/: README.md  donation-links-template.md  index.html  patreon-startup.html  privacy.html  terms.html
docs/android/: latest.json
docs/assets/: styles.css
docs/integration/: android_design_lock_2026-02-23.md  android_execution_backlog_2026-02-21.md  android_style_decision_2026-02-21.md  approved_scope_architecture_ui_flow_2026-02-21.md  child_lion_profile_policy_lock_2026-03-03.md  competitor_gap_analysis_2026-02-21.md  free_paid_feature_strategy_2026-02-21.md  merge_summary_2026-02-20.md  phase1_5_retail_readiness_audit_2026-03-04.md  phase6_lyra_qa_trainer_2026-03-04.md  phase6_masvs_verification_sweep_2026-03-04.md  phase6_play_store_first_submission_guide_2026-03-04.md  pricing_model_2026-02-21.md  (+10 more)
scripts/: first_run_example.sh  run_watchdog_linux.sh  windows_watchdog.ps1
watchdog/: watchdog.py
(+199 files in other folders)
