[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "credential-defense"
version = "0.1.0"
description = "Local-first credential defense orchestration for breach triage and account hardening."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "cryptography>=41.0.0",
  "requests>=2.31.0",
]

[project.scripts]
credential-defense = "credential_defense.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

